xinyi fix overflowing text and spacing

--- a/src/components/Forecast.css
+++ b/src/components/Forecast.css
@@ -4,9 +4,10 @@
     background-color: #30343C;
     border-radius: 15px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-    width: 98%;
-    height: 70%;
-    margin-top: 7%;    
+    width: 90%;
+    max-height: fit-content;
+    margin-top: 30px;
+    padding: 10px;
   }
   
   .forecast-hour {
@@ -25,5 +26,5 @@
 
   .weather-icon-down {
     width: 50%; 
-    height: auto;
+    height: auto; 
   }
