--- a/src/components/mobile.css
+++ b/src/components/mobile.css
@@ -1,6 +1,7 @@
-@media (max-width: 700px) {
+@media (max-width: 841px) {
     .container {
         display: grid;
+        grid-template-rows: repeat(1, 1fr);
         grid-template-areas:
             "header"
             "search"
@@ -12,7 +13,7 @@
     }
     .header {
         grid-area: header;
-        width: 100vw;
+        width: 90%;
         text-align: center;
     }
     .search {
@@ -21,12 +22,13 @@
     }
     .weather {
         grid-area: weather;
+        align-items: center;
     }
     .forecast {
         grid-area: forecast;
     }
     .recommendations {
-        grid-area: rec;
+        grid-area: recs;
     }
     .events {
         grid-area: events;
